# datajanitor-env

./: README.md  app.py  baseline.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  utils.py
data/: easy.csv  hard.csv  medium.csv
first_rldemo/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
first_rldemo/server/: Dockerfile  __init__.py  app.py  first_rldemo_environment.py
server/: app.py
