[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datajanitor-env"
version = "0.1.0"
description = "OpenEnv-compatible RL-style environment for automated data cleaning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ritika Shinde" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pandas",
  "numpy",
  "requests",
  "pydantic",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"